--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "devStart": "nodemon server.js",
+    "build": "npm install && npm run build:optimize",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
